--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.LifeUtils" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.LifeUtils" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/purple_500</item>
+        <item name="colorControlHighlight">@color/purple_200</item>
+    </style>
 </resources>
